RESOLVED FIXED170727
REGRESSION(r215211): [GTK] Lots of image related tests are timing out, causing the test bot to exit early
https://bugs.webkit.org/show_bug.cgi?id=170727
Summary REGRESSION(r215211): [GTK] Lots of image related tests are timing out, causin...
Miguel Gomez
Reported 2017-04-11 05:44:42 PDT
r215211 changed ImageDecoder::isSizeAvailable() to call encodedDataStatus() in the subclasses, which forces a partial decoding of the image to get the size from the file. But ImageDecoder::isSizeAvailable() is also being called inside the decoders in some places. One of this places is the setSize() method inside each decoder. So a call to isSizeAvailable() when the image size is not known causes the image to be partially decoded to get the size, but as a result setSize() gets called, which calls isSizeAvailable() again, which triggers a new decoder because the size has not been set, and we have another infinte loop.
Attachments
Patch (7.12 KB, patch)
2017-04-11 06:12 PDT, Miguel Gomez
cgarcia: review+
Miguel Gomez
Comment 1 2017-04-11 06:12:50 PDT
Carlos Garcia Campos
Comment 2 2017-04-11 06:16:10 PDT
Comment on attachment 306808 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=306808&action=review > Source/WebCore/ChangeLog:3 > + REGRESSION(r215211): [GTK] Lots of image related tests are timign out, causing the test bot to exit early Fix the typo. timign -> timing
Miguel Gomez
Comment 3 2017-04-11 06:19:27 PDT
Note You need to log in before you can comment on or make changes to this bug.